--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ variables:
   imageRepository: 'thedevopsguyjkkubs'
   containerRegistry: 'jkregistry.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/jkkubs/Dockerfile'
+  buildContext: .
   tag: '$(Build.BuildId)'
   
   # Agent VM image name
